--- a/credit_analysis.ipynb
+++ b/credit_analysis.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_csv = 'data/UCI_Credit_Card.csv'\n",
+    "\n",
+    "data_file = spark.read.csv(file_csv, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -65,10 +76,6 @@
     }
    ],
    "source": [
-    "file_csv = 'data/UCI_Credit_Card.csv'\n",
-    "\n",
-    "data_file = spark.read.csv(file_csv, header=True)\n",
-    "\n",
     "data_file.show()"
    ]
   },
@@ -83,20 +90,246 @@
    "source": [
     "#### Agregar columna al dataframe\n",
     "\n",
-    "`$ python PiNet.py`"
+    "- data_file = data_file.withColumn(\"colname\", new_column)\n",
+    "\n",
+    "#### Filtrar datos con una string SQL\n",
+    "\n",
+    "- filtered_data = data_file.filter(\"colname > value\")\n",
+    "\n",
+    "#### Filtrar datos con una columna booleana\n",
+    "\n",
+    "- filtered_data2 = data_file.filter(data.colname > value)\n",
+    "\n",
+    "#### Seleccionar el primer conjunto de columnas\n",
+    "\n",
+    "- selected1 = data_file.select(\"colname1\", \"colname2\", \"colname3\")\n",
+    "\n",
+    "#### Agrupar por columna \n",
+    "\n",
+    "- grouped_data = data_file.groupBy(\"colname\")\n",
+    "\n",
+    "#### Unir dataframes\n",
+    "\n",
+    "- joined_data = data1.join(data2, on=\"common_colname\", how=\"join_type\")\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Machine Learning Pipeline\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Agregar columna al dataframe\n",
-    "data_file = data_file.withColumn(\"\")"
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.feature import VectorAssembler"
    ]
+  },
+  {
+   "source": [
+    "### Cast columnas a enteros"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "+--------------------------+\n|default.payment.next.month|\n+--------------------------+\n|                         1|\n|                         1|\n|                         0|\n|                         0|\n|                         0|\n+--------------------------+\nonly showing top 5 rows\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cuando tenga nombres de columnas con puntos usar backticks: df.select(\"`col0.1`\")\n",
+    "# data_file = data_file.select('`default.payment.next.month`').show(5)\n",
+    "#data_file.withColumnRenamed('`default.payment.next.month`', 'label')"
+   ]
+  },
+  {
+   "source": [
+    "### Es mejor eliminar los puntos, esto solo es util cuando se trabajan con nested schemas"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_df = data_file.toDF(*(c.replace('.', '_') for c in data_file.columns))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_df = clean_df.withColumn(\"LIMIT_BAL\", clean_df.LIMIT_BAL.cast(\"Integer\"))\n",
+    "clean_df = clean_df.withColumn(\"SEX\", clean_df.SEX.cast(\"Integer\"))\n",
+    "clean_df = clean_df.withColumn(\"EDUCATION\", clean_df.EDUCATION.cast(\"Integer\"))\n",
+    "clean_df = clean_df.withColumn(\"MARRIAGE\", clean_df.MARRIAGE.cast(\"Integer\"))"
+   ]
+  },
+  {
+   "source": [
+    "### Crear labels"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_df = clean_df.withColumn(\"label\", clean_df.default_payment_next_month.cast(\"Integer\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "+-----+\n|label|\n+-----+\n|    1|\n|    1|\n|    0|\n|    0|\n|    0|\n+-----+\nonly showing top 5 rows\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_df.select('label').show(5)"
+   ]
+  },
+  {
+   "source": [
+    "### Eliminar valores faltantes (Nan)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_df = clean_df.filter(\"LIMIT_BAL is not NULL and SEX is not NULL and EDUCATION is not NULL and MARRIAGE is not NULL\")"
+   ]
+  },
+  {
+   "source": [
+    "### Hacer un VectorAssembler"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vec_assembler = VectorAssembler(inputCols=[\"LIMIT_BAL\", \"SEX\", \"EDUCATION\", \"MARRIAGE\"],\n",
+    "                                outputCol=\"features\")\n",
+    "pipeline = Pipeline(stages=[vec_assembler])"
+   ]
+  },
+  {
+   "source": [
+    "### Crear un StringIndexer\n",
+    "- string_indexer = StringIndexer(inputCol=”inputCol”, outputCol=”outputCol”)\n",
+    "### Crear un OneHotEncoder\n",
+    "- one_encoder = OneHotEncoder(inputCol=”inputCol”, outputCol=”outputCol”)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Particionar la data en train y test"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe_data = pipeline.fit(clean_df).transform(clean_df)\n",
+    "\n",
+    "train, test = pipe_data.randomSplit([0.8, 0.2])"
+   ]
+  },
+  {
+   "source": [
+    "## Finalmente ajustar el modelo y ponerlo a prueba\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.classification import LogisticRegression\n",
+    "import pyspark.ml.evaluation as evals\n",
+    "import pyspark.ml.tuning as tune"
+   ]
+  },
+  {
+   "source": [
+    "### Crear el estimador"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logistic_reg = LogisticRegression()\n",
+    "\n",
+    "best_log_reg = logistic_reg.fit(train)\n",
+    "\n",
+    "predictions = best_log_reg.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
